src/components/CourseCatalog/tablesorter.css
.table-sortable {
    border-collapse: collapse;
    width: 85%;
}

.table-sortable th, .pointer {
    cursor: pointer;
}

.table-sortable .th-sort-asc::after {
    content: "\25b4";
}

.hide td p {
    max-height: 0;
    padding: 0 10px;
    margin: 0;
    box-sizing: border-box;
    overflow: hidden;
    transition: max-height 0.3s, padding 0.3s;
}

.hide.active td p {
    max-height: 600px;
    padding: 10px 10px;
    transition: max-height 0.6s, padding 0.6s;
}

.table-sortable .th-sort-desc::after {
    content: "\25be";
}

.table-sortable .th-sort-asc::after,
.table-sortable .th-sort-desc::after {
    margin-left: 5px;
}

.table-sortable .th-sort-asc,
.table-sortable .th-sort-desc {
    background: rgba(0, 0, 0, 0.1);
}

.table-sortable tr, .table-sortable td {
    padding: 0;
}

.table-sortable th, .pointer  td{
   padding: 6px 0 6px 0;
}
.table-sortable thead th {
    text-align: left;
    border-bottom: 1px solid black;
    color: #5585A2;
}

th, td {
  border-left-style: hidden!important;
  border-right-style: hidden!important;
}
tr.hide {
  border-top-style: hidden!important;
  border-bottom: 1px solid black;
}
#search {
    padding: 0.25em 0;
}
#courseCatalog, #courseCatalog button, #courseCatalog label{
  font-family: Roboto, sans-serif;
  font-size: 11px;
  padding: 0;
}
span.secret {
  display: none;
}
.introText {
    height: 30px;
}
.clickText {
    font-style: italic;
}

.collapseExpandLinks {
    text-align: center;
    padding: 0 25px;
    font-style: normal;
}

.collapseExpandText {
    color: #5585A2;
    text-decoration: underline;
    cursor: pointer;
}

